apply builder pattern for Customer

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
 }
 
 dependencies {
+    // Lombok
+//    compileOnly 'org.projectlombok:lombok:1.18.26'
+//    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
