--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,10 @@ android {
 }
 
 dependencies {
+
     //Gson
     implementation 'com.google.code.gson:gson:2.10.1'
-    // Coordinatorlayout
-    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -49,6 +49,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Coordinatorlayout
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+    // CircleImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    // Load Image
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //    Lombok
     //    compileOnly 'org.projectlombok:lombok:1.18.26'
